--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
   },
   "rules": {
     "import/prefer-default-export": "off",
+    "no-underscore-dangle": "off",
     "no-param-reassign": "off",
     "consistent-return": "off",
     "react-hooks/rules-of-hooks": "error",
