--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "npx stylelint src/**/*.scss --fix && eslint src/**/*.{js,jsx,ts,tsx} --max-warnings=10",
+    "lint": "eslint src/**/*.{js,jsx,ts,tsx} --fix --max-warnings=10",
     "stylelint": "npx stylelint src/**/*.scss --fix",
     "prettier": "prettier --write src/**/*.{js,jsx,ts,tsx,css,scss}",
     "netlify-build": "prettier --write src/**/*.{js,jsx,ts,tsx} && eslint src/**/*.{js,jsx,ts,tsx} --max-warnings=10 && react-scripts build"
