--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
+    "antd": "^5.0.2",
     "axios": "^1.1.3",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-react": "^1.1.7",
