--- a/.editorconfig
+++ b/.editorconfig
@@ -12,5 +12,8 @@ indent_size = 2
 max_line_length = 100
 trim_trailing_whitespace = true
 
+[*.md]
+trim_trailing_whitespace = false
+
 [*.json]
 insert_final_newline = false
