--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,21 +2,28 @@
   "parser": "@typescript-eslint/parser",
   "extends": [
     "airbnb",
+    "airbnb/hooks",
+    "airbnb-typescript",
+    "eslint:recommended",
     "plugin:react/recommended",
     "plugin:@typescript-eslint/recommended",
-    "prettier",
+    "plugin:@typescript-eslint/recommended-requiring-type-checking",
     "plugin:react-hooks/recommended",
-    "plugin:prettier/recommended"
+    "plugin:prettier/recommended",
+    "prettier"
   ],
   "plugins": [
     "@typescript-eslint",
     "react",
-    "prettier",
-    "react-hooks"
+    "react-hooks",
+    "jsx-a11y",
+    "import",
+    "prettier"
   ],
   "parserOptions": {
-    "ecmaVersion": 11,
+    "ecmaVersion": "latest",
     "sourceType": "module",
+    "project": "tsconfig.json",
     "ecmaFeatures": {
       "jsx": true
     }
@@ -25,8 +32,14 @@
     "react/require-default-props": "off",
     "jsx-a11y/no-static-element-interactions": "off",
     "jsx-a11y/click-events-have-key-events": "off",
-    "import/prefer-default-export": "off",
     "no-underscore-dangle": "off",
+    "@typescript-eslint/restrict-template-expressions": "off",
+    // "import/no-cycle": "off",
+    "@typescript-eslint/no-misused-promises": "off",
+    /* disable conflicting rules */
+    "@typescript-eslint/no-unsafe-member-access": "off",
+    "@typescript-eslint/no-unsafe-assignment": "off",
+    "import/prefer-default-export": "off",
     "no-param-reassign": "off",
     "consistent-return": "off",
     "react-hooks/rules-of-hooks": "error",
@@ -41,7 +54,9 @@
     "prettier/prettier": [
       "error",
       {
-        "endOfLine": "auto"
+        "endOfLine": "lf",
+        "printWidth": 100,
+        "bracketSameLine": true
       }
     ],
     "@typescript-eslint/interface-name-prefix": "off",
@@ -58,11 +73,7 @@
         "namedComponents": "arrow-function",
         "unnamedComponents": "arrow-function"
       }
-    ],
-    /* disable conflicting airbnb rules */
-    "react/jsx-filename-extension": "off",
-    "import/extensions": "off",
-    "import/no-unresolved": "off"
+    ]
   },
   "settings": {
     "react": {
