--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,8 +12,12 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "baseUrl": "./src",
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "baseUrl": "src",
+    "rootDir": "./",
+    "noImplicitReturns": true,
+    "removeComments": true,
+    "noImplicitThis": true
   },
   "include": ["./src/**/*"]
 }
